# NICS_GZB

./: README.md
bringup/launch/akm_sim/: akm_sim.launch  akm_sim_2robots.launch  akm_sim_3robots.launch  akm_sim_4robots.launch
bringup/param/: base_local_planner_params.yaml  wheelbase.yaml
bringup/rviz/: nics.rviz
bringup/worlds/: box1.world  box2.world  cylinder.world  cylinder1.world  fence.world  fence1.world  plane.world  slam.world
car_sim/akm_control/: CMakeLists.txt  package.xml
car_sim/akm_description/: CMakeLists.txt  package.xml
car_sim/akm_gazebo/: CMakeLists.txt  package.xml
nics_bringup/: CMakeLists.txt  package.xml
nics_bringup/config/: akm_control.yaml
nics_bringup/launch/: nics_gazebo_actor.launch  nics_gazebo_actor_2.launch  nics_gazebo_actor_new.launch  nics_gazebo_block.launch  nics_gazebo_simple.launch
nics_bringup/map/: map_new.pgm  map_new.yaml  mymap.pgm  mymap.yaml
nics_bringup/rviz/: AI_1.rviz  AI_2.rviz  AKM_1.rviz  akm.rviz
nicsrobot_line_follower/: CMakeLists.txt  README.md  package.xml  setup.py
nicsrobot_line_follower/launch/: nicsrobot_line_follower.launch  nicsrobot_line_follower_2.launch
nicsrobot_line_follower/scripts/help/: control_node.py  velocity_node.py
nicsrobot_line_follower/scripts/level_1/: detection_node.py  motion_node.py
nicsrobot_line_follower/scripts/level_2/: detection_node_2.py  motion_node_2.py
task_line_follower/: CMakeLists.txt  package.xml  setup.py
task_line_follower/launch/: task_line_follower.launch
task_line_follower/scripts/: detection_node.py  motion_node.py
(+143 files in other folders)
